refactor: added .idea/**/discord.xml to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ target
 
 # User-specific stuff
 .idea/**/workspace.xml
+.idea/**/discord.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
